--- a/src/main/resources/com/example/demo1/earthGui.fxml
+++ b/src/main/resources/com/example/demo1/earthGui.fxml
@@ -5,21 +5,6 @@
 <?import javafx.scene.layout.*?>
 
 <BorderPane prefHeight="635.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.Controller">
-   <right>
-      <VBox maxHeight="-Infinity" prefHeight="600.0" prefWidth="200.0" spacing="15.0" BorderPane.alignment="CENTER">
-         <children>
-            <RadioButton mnemonicParsing="false" selected="true" text="Option 1">
-               <toggleGroup>
-                  <ToggleGroup fx:id="radio" />
-               </toggleGroup></RadioButton>
-            <RadioButton mnemonicParsing="false" text="Option 2" toggleGroup="$radio" />
-            <RadioButton mnemonicParsing="false" text="Option 3" toggleGroup="$radio" />
-         </children>
-         <padding>
-            <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-         </padding>
-      </VBox>
-   </right>
    <bottom>
       <FlowPane fx:id="fp" hgap="5.0" maxHeight="-Infinity" prefHeight="35.0" prefWidth="800.0" vgap="5.0" BorderPane.alignment="CENTER">
          <children>
@@ -45,4 +30,20 @@
    <center>
       <Pane prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
    </center>
+   <right>
+      <TabPane accessibleRole="BUTTON" prefHeight="100.0" prefWidth="600.0" rotate="-90.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+        <tabs>
+          <Tab text="rechercher">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="100.0" />
+            </content>
+          </Tab>
+          <Tab text="information sur la zone">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="100.0" />
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
+   </right>
 </BorderPane>
