--- a/src/main/resources/com/example/demo1/earthGui.fxml
+++ b/src/main/resources/com/example/demo1/earthGui.fxml
@@ -92,7 +92,27 @@
                   </Tab>
                   <Tab text="info sur la zone">
                       <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <VBox layoutX="38.0" layoutY="14.0" prefHeight="358.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                               <Label alignment="CENTER" prefWidth="200.0" text="Relevés">
+                                   <font>
+                                       <Font size="30.0" />
+                                   </font>
+                                   <VBox.margin>
+                                       <Insets />
+                                   </VBox.margin>
+                               </Label>
+                                 <ScrollPane fx:id="releveScroll" hbarPolicy="NEVER" prefHeight="555.0" prefWidth="180.0">
+                                   <content>
+                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                                   </content>
+                                 </ScrollPane>
+                                 <padding>
+                                    <Insets bottom="6.0" left="10.0" right="10.0" top="5.0" />
+                                 </padding>
+                              </VBox>
+                           </children></AnchorPane>
                       </content>
                   </Tab>
                   <Tab text="espece de la zone">
