--- a/src/main/resources/com/example/demo1/earthGui.fxml
+++ b/src/main/resources/com/example/demo1/earthGui.fxml
@@ -103,9 +103,12 @@
                                        <Insets />
                                    </VBox.margin>
                                </Label>
-                                 <ScrollPane fx:id="releveScroll" hbarPolicy="NEVER" prefHeight="555.0" prefWidth="180.0">
+                                 <ScrollPane hbarPolicy="NEVER" prefHeight="555.0" prefWidth="180.0">
                                    <content>
-                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="179.0">
+                                          <children>
+                                             <VBox fx:id="releveScroll" layoutX="50.0" layoutY="41.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                          </children></AnchorPane>
                                    </content>
                                  </ScrollPane>
                                  <padding>
